# tapml

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
cpp/: base.h  conv_templates.cc  conversation.cc  conversation.h  image_embed.cc  image_embed.h  llm_chat.cc  llm_chat.h  random.h  streamer.cc  streamer.h  tokenizers.cc  tokenizers.h
cpp/loader/: multi_gpu_loader.cc
cpp/metadata/: json_parser.h  model.cc  model.h
cpp/serve/: async_threaded_engine.cc  async_threaded_engine.h  config.cc  config.h  data.cc  data.h  engine.cc  engine.h  engine_state.cc  engine_state.h  event_trace_recorder.cc  event_trace_recorder.h  function_table.cc  function_table.h  logit_processor.cc  logit_processor.h  model.cc  model.h  request.cc  request.h  request_state.cc  request_state.h
cpp/serve/engine_actions/: action.cc  action.h  action_commons.cc  action_commons.h  batch_decode.cc  batch_draft.cc  batch_verify.cc  new_request_prefill.cc
cpp/serve/grammar/: grammar.cc  grammar.h  grammar_builder.h  grammar_parser.cc  grammar_parser.h  grammar_serializer.cc  grammar_serializer.h  grammar_simplifier.cc  grammar_simplifier.h  grammar_state_matcher.cc  grammar_state_matcher.h  grammar_state_matcher_base.h  grammar_state_matcher_preproc.h  grammar_state_matcher_state.h  support.h
cpp/serve/sampler/: cpu_sampler.cc  gpu_sampler.cc  sampler.h
cpp/support/: encoding.cc  encoding.h  load_bytes_from_file.h  progress_bar.h
ios/: prepare_libs.sh  prepare_model_lib.py  prepare_params.sh
ios/MLCChat/: MLCChatApp.swift  app-config.json
ios/MLCChat.xcodeproj/: project.pbxproj
ios/MLCChat.xcodeproj/xcshareddata/xcschemes/: MLCChat.xcscheme
ios/MLCChat/Common/: Constants.swift
ios/MLCChat/Models/: AppConfig.swift  ModelConfig.swift  ParamsConfig.swift
ios/MLCChat/States/: AppState.swift  ChatState.swift  ModelState.swift
ios/MLCChat/Views/: ChatView.swift  ImageProcessing.swift  MessageView.swift  ModelView.swift  StartView.swift
ios/MLCSwift/: Package.swift
ios/MLCSwift/Sources/ObjC/: LLMChat.mm
python/: setup.py
python/tapml/: __init__.py  __main__.py  _ffi_api.py  base.py  callback.py  chat_module.py  conversation_template.py  gradio.py  help.py  libinfo.py  streamer.py  tokenizer.py
python/tapml/cli/: bench.py  benchmark.py  chat.py  compile.py  convert_weight.py  delivery.py  gen_config.py  model_metadata.py
python/tapml/compiler_pass/: __init__.py  dispatch_kv_cache_creation.py  estimate_memory_usage.py  pipeline.py
python/tapml/embeddings/: openai.py
python/tapml/interface/: bench.py  chat.py  compile.py  compiler_flags.py  convert_weight.py  gen_config.py  jit.py
python/tapml/loader/: __init__.py  huggingface_loader.py  mapping.py  stats.py  utils.py
python/tapml/model/: model.py  model_preset.py
python/tapml/model/baichuan/: baichuan_loader.py  baichuan_model.py  baichuan_quantization.py
python/tapml/model/gemma/: gemma_loader.py  gemma_model.py  gemma_quantization.py
python/tapml/model/gpt2/: gpt2_loader.py  gpt2_model.py  gpt2_quantization.py
python/tapml/model/gpt_bigcode/: gpt_bigcode_loader.py  gpt_bigcode_model.py  gpt_bigcode_quantization.py
python/tapml/model/gpt_neox/: gpt_neox_loader.py  gpt_neox_model.py  gpt_neox_quantization.py
python/tapml/model/internlm/: internlm_loader.py  internlm_model.py  internlm_quantization.py
python/tapml/model/llama/: llama_loader.py  llama_model.py  llama_quantization.py
python/tapml/model/llava/: llava_loader.py  llava_model.py  llava_quantization.py
python/tapml/model/mistral/: mistral_loader.py  mistral_model.py  mistral_quantization.py
python/tapml/model/mixtral/: mixtral_loader.py  mixtral_model.py  mixtral_quantization.py
python/tapml/model/orion/: orion_loader.py  orion_model.py  orion_quantization.py
python/tapml/model/phi/: phi_loader.py  phi_model.py  phi_quantization.py
python/tapml/model/qwen/: qwen_loader.py  qwen_model.py  qwen_quantization.py
python/tapml/model/qwen2/: qwen2_loader.py  qwen2_model.py  qwen2_quantization.py
python/tapml/model/rwkv5/: rwkv5_loader.py  rwkv5_model.py  rwkv5_quantization.py
python/tapml/model/rwkv6/: rwkv6_loader.py  rwkv6_model.py  rwkv6_quantization.py
python/tapml/model/stable_lm/: stablelm_loader.py  stablelm_model.py  (+1 more)
python/tapml/nn/: expert.py  kv_cache.py
python/tapml/op/: attention.py  extern.py
python/tapml/protocol/: __init__.py  conversation_protocol.py  openai_api_protocol.py  protocol_utils.py
python/tapml/quantization/: awq_quantization.py  ft_quantization.py  group_quantization.py
python/tapml/serve/: __init__.py  _ffi_api.py  async_engine.py  config.py  data.py  engine.py  event_trace_recorder.py  grammar.py  json_schema_converter.py  request.py
python/tapml/support/: argparse.py  auto_config.py  auto_device.py  auto_target.py  constants.py  convert_tiktoken.py  download.py  logging.py  preshard.py  random.py
(+17 files in other folders)
